--- a/password_manager_electron/password_manager/src/pages/index.html
+++ b/password_manager_electron/password_manager/src/pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Password manager | Log-in</title>
     <link rel="stylesheet" href="index.css"/>
+    <script type="module" src="../assets/JavaScript/Login.js"></script>
   </head>
   <body>
     <div class="header">
@@ -26,5 +27,8 @@
       <button>Log-in</button>
       <a href="./signup.html">Don't have an account?</a>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/solid-toast/dist/solid-toast.min.js"></script>
+    <script type="module" src="../assets/JavaScript/Login.js"></script>
   </body>
 </html>
