upload logins fetch and creation, working on deletion

--- a/password_manager_electron/password_manager/src/pages/home.html
+++ b/password_manager_electron/password_manager/src/pages/home.html
@@ -49,9 +49,10 @@
     </div>
 
     <div class="card">
-        <div class="passwords">
-
-        </div>
+        <h1>Log-ins:</h1>
+        <ul class="passwords" id="passwords">
+     
+        </ul>
     </div>
 
     <script src="../assets/JavaScript/passwords.js"></script>
