--- a/password_manager_electron/password_manager/src/pages/home.html
+++ b/password_manager_electron/password_manager/src/pages/home.html
@@ -6,8 +6,9 @@
     <title>Password manager | Home</title>
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!--<script src="../assets/JavaScript/login_handler.js"></script>-->
+    <script src="../assets/JavaScript/login_handler.js"></script>
     <script src="../assets/JavaScript/passwords.js"></script>
+    <script src="../assets/JavaScript/electron_resizer.js"></script>
 </head>
 <body>
     <div class="header">
