--- a/password_manager_electron/password_manager/src/pages/signup.html
+++ b/password_manager_electron/password_manager/src/pages/signup.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="index.css"/>
     <script type="module" src="../assets/JavaScript/login.js"></script>
     <script src="../assets/JavaScript/login_reseter.js"></script>
+    <script src="../assets/JavaScript/electron_resizer.js"></script>
+    
   </head>
   <body>
-    <div class="header">
+    <div class="card">
       <h1>Sign-up</h1>
     </div>
 
