--- a/better_portfolio/index.html
+++ b/better_portfolio/index.html
@@ -9,57 +9,233 @@
     <script src="./assets/JavaScript/link_scroll.js"></script>
 </head>
 <body>
-    <header>
-        <div class="header-title">
-            <div class="name">
-                <h1>David <span>Hougesen</span></h1>
-                <div class="echo">
-                    <h1>David Hougesen</h1>
-                    <h1>David Hougesen</h1>
+    <main>
+        <section id="header">
+            <div class="header-title">
+                <div class="name">
+                    <h1>David <span>Hougesen</span></h1>
+                    <div class="echo">
+                        <h1>David Hougesen</h1>
+                        <h1>David Hougesen</h1>
+                    </div>
+                </div>
+                <img src="./assets/images/me_blured.jfif" alt="Blurred image of David Hougesen" class="blurred-image">
+            </div>
+            <div class="header-content">
+                <nav>
+                    <ul>
+                        <li><a href="#intro">Introduction</a></li>
+                        <div class="vertical-line"></div>
+                        <li><a href="#experience-section">Experience</a></li>
+                        <div class="vertical-line"></div>
+                        <li><a href="#skills">Skills</a></li>
+                        <div class="vertical-line"></div>
+                        <li><a href="#interests">Interests</a></li>
+                        <div class="vertical-line"></div>
+                        <li><a href="#contact">Contact me</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="scroll">
+               <h3>Scroll down</h3> 
+               <i class="fa-solid fa-arrow-down"></i>
+            </div>
+        </section>
+        <section id="intro">
+            <div class="content">
+                <div class="content-header">
+                    <h1>
+                        Hello, <br>
+                        I'm David!
+                    </h1>
+                </div>
+                <div class="content-body">
+                    <p>
+                        I am an aspiring software developer based in Denmark. <br>
+                        I'm currently studying as a datatechnician with a specialty in programming.
+                    </p>
                 </div>
             </div>
-            <img src="./assets/images/me_blured.jfif" alt="Blurred image of David Hougesen" class="blurred-image">
-        </div>
-        <div class="header-content">
-            <nav>
-                <ul>
-                    <li><a href="#intro">Introduction</a></li>
-                    <div class="vertical-line"></div>
-                    <li><a href="#education">Education</a></li>
-                    <div class="vertical-line"></div>
-                    <li><a href="#experience">Experience</a></li>
-                    <div class="vertical-line"></div>
-                    <li><a href="#skills">Skills</a></li>
-                    <div class="vertical-line"></div>
-                    <li><a href="#interests">Interests</a></li>
-                    <div class="vertical-line"></div>
-                    <li><a href="#contact">Contact me</a></li>
-                </ul>
+            <div class="card-container">
+                <div class="info-card">
+                    <div class="info-card-header">
+                        <h2>Info</h2>
+                    </div>
+                    <div class="info-card-content">
+                        <ul>
+                            <li><i class="fa-solid fa-location-dot"></i><p>Langeskov, Denmark</p></li>
+                            <li><i class="fa-solid fa-envelope"></i><p>davi5145@edu.sde.dk</p></li>
+                            <li><i class="fa-solid fa-phone"></i><p>+45 60 88 63 06</p></li>
+                        </ul>
+                    </div>
+                    <div class="birth-date">
+                        <p>6th September 2006</p>
+                    </div>
+                    <div class="nationality">
+                        <p>Danish</p>
+                    </div>
+                </div>
+            </div>
+            <nav class="get-in-touch">
+                <a href="#contact">Get i touch</a>
             </nav>
-        </div>
-        <div class="scroll">
-           <h3>Scroll down</h3> 
-           <i class="fa-solid fa-arrow-down"></i>
-        </div>
-    </header>
-    <main>
-        <section id="intro">
-            <p>intro</p>
         </section>
-        <section id="education">
-            <p>education</p>
-        </section>
-        <section id="experience">
-            <p>experience</p>
+        <section id="experience-section">
+            <div class="experience-section-header">
+                <h1>RESUME</h1>
+                <h1>RESUME</h1>
+                <h1>RESUME</h1>
+                <h1>RESUME</h1>
+            </div>
+            <div class="education" id="education">
+                <div class="education-header">
+                    <h1>Education</h1>
+                </div>
+                <div class="education-content">
+                    <ul>
+                        <li>
+                            <div class="education-item">
+                                <h2>2023-Present</h2>
+                                <div class="education-item-content">
+                                    <h3>Syddansk Erhvervskole</h3>
+                                    <p>Data and communication</p>
+                                    <p>Datatechnician with a specialty in programming</p>
+                                </div>
+                            </div>
+                        </li>
+                        <div class="vertical-line"></div>
+                        <li>
+                            <div class="education-item">
+                                <h2>2012-2022</h2>
+                                <div class="education-item-content">
+                                    <h3>Langeskov skole</h3>
+                                    <p>0-9th grade</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="experience" id="experience">
+                <div class="experience-header">
+                    <h1>Experience</h1>
+                </div>
+                <div class="experience-content">
+                    <ul>
+                        <li>
+                            <div class="experience-item">
+                                <h2>2023-2024</h2>
+                                <div class="experience-item-content">
+                                    <h3>HOUSE4IT</h3>
+                                    <p>ERP developer | Uniconta</p>
+                                </div>
+                            </div>
+                        </li>
+                        <div class="vertical-line"></div>
+                        <li>
+                            <div class="experience-item">
+                                <h2>2021-2023</h2>
+                                <div class="experience-item-content">
+                                    <h3>Kjavis.dk</h3>
+                                    <p>IT Manager + web development</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="experience-subjects">
+                    <div class="experience-subjects-row">
+                        <label>WEB DEVELOPMENT</label>
+                        <label>ERP DEVELOPMENT</label>
+                    </div>
+                    <div class="experience-subjects-row">
+                        <label>UNICONTA</label>
+                        <label>WOOCOMMERCE</label>
+                        <label>IT-SUPPORT</label>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="skills">
-            <p>skills</p>
-        </section>
-        <section id="interests">
-            <p>interests</p>
+            <div class="skills">
+                <div class="skills-header">
+                    <h1>Skills</h1>
+                </div>
+                <div class="skills-body">
+                    <div class="skills-item">
+                        <div class="skills-item-header">
+                            <h1>Coding skills</h1>
+                        </div>
+                        <div class="skills-item-content">
+                            <ul>
+                                <li><p><span>HTML</span> : Advanced</p></li>
+                                <li><p><span>CSS</span> : Advanced</p></li>
+                                <li><p><span>JavaScript</span> : Intermediate</p></li>
+                                <li><p><span>PHP</span> : Beginner</p></li>
+                                <li><p><span>C#</span> : Advanced</p></li>
+                                <li><p><span>XAML</span> : Intermediate</p></li>
+                                <li><p><span>Python</span> : Intermediate</p></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="skills-item">
+                        <div class="skills-item-header">
+                            <h1>Software skills</h1>
+                        </div>
+                        <div class="skills-item-content">
+                            <ul>
+                                <li><p><span>.NET Framework</span></p></li>
+                                <li><p><span>WPF</span></p></li>
+                                <li><p><span>Electron</span></p></li>
+                                <li><p><span>Figma</span></p></li>
+                                <li><p><span>WooCommerce</span></p></li>
+                                <li><p><span>GitHub</span></p></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="skills-item">
+                        <div class="skills-item-header">
+                            <h1>Languages</h1>
+                        </div>
+                        <div class="skills-item-content">
+                            <ul>
+                                <li><p><span>Danish</span> : Native</p></li>
+                                <li><p><span>English</span> : Fluent</p></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="skills-subjects">
+                        <div class="skills-subjects-row">
+                            <label>DESIGN</label>
+                            <label>FULLSTACK</label>
+                            <label>CREATIVITY</label>
+                        </div>
+                        <div class="skills-subjects-row">
+                            <label>COMPATABILITY</label>
+                            <label>MANAGEMENT</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="icons">
+                    <div class="icon-1">
+                        <i class="fa-solid fa-code"></i>
+                    </div>
+                    <div class="icon-2">
+                        <i class="fa-solid fa-code-branch"></i>
+                    </div>
+                    <div class="icon-3">
+                        <i class="fa-solid fa-file-code"></i>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="contact">
-            <p>contact</p>
+            
+        </section>
+        <section id="end">
+            <h1>End</h1>
+            <h1>End</h1>
+            <h1>End</h1>
         </section>
     </main>
 
